--- a/com.nexarobotics.palletizinghmi/package.json
+++ b/com.nexarobotics.palletizinghmi/package.json
@@ -44,7 +44,7 @@
         "eslint-plugin-react": "^7.29.4",
         "eslint-webpack-plugin": "^3.1.1",
         "fs-extra": "^10.0.0",
-        "javascript-obfuscator": "^4.0.0",
+        "javascript-obfuscator": "4.1.1",
         "json-loader": "^0.5.7",
         "sass": "^1.54.4",
         "sass-loader": "^12.4.0",
